<resources>
    <string name="app_name">MedsTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medication_fragment">Прием</string>
    <string name="meds_tracking_fragment">Лекарства</string>
    <string name="notifications_fragment">Уведомления</string>
    <string name="date_placeholder">19 июля</string>
    <string name="time_placeholder">8:00</string>
    <string name="add_medication_item">Прием</string>
    <string name="add_meds_tracking_item">Лекарство</string>
    <string name="medication_taken">Принято в\u0020</string>
    <string name="medication_missed">Пропущено</string>
    <string name="medication_name_placeholder">Название лекарства</string>
    <string name="medication_dosage_placeholder">0.5 таб.</string>
    <string name="remind_five_minute">Напомнить через 5 минут</string>
    <string name="skipped">Пропущено</string>
    <string name="taken">Принято</string>
    <string name="after_meal">после еды</string>
    <string name="before_meal">до еды</string>
    <string name="during_meal">во время еды</string>
    <string name="empty_string"></string>
    <string name="tracking">Отслеживание</string>
    <string name="medicine">Прием</string>
    <string name="add">Добавить</string>
    <string name="add_new_package">Добавить новую упаковку</string>
    <string name="med_name_hint">Название лекарства</string>
    <string name="med_daily_dosage_hint">Суточная дозировка</string>
    <string name="med_comment_hint">Комментарий</string>
    <string name="dosage_units_hint">Ед. дозировки</string>
    <string name="default_dosage_unit">Таблетки</string>
    <string name="current_stock">Текущий запас</string>
    <string name="units_hint">Вид</string>
    <string name="spinner_tracking_hint">Тип отслеживания</string>
    <string name="default_tracking_type">Не добавлять</string>
    <string name="add_reminder">Добавить напоминания</string>
    <string name="title_add_reminder">Время приема</string>
    <string name="default_reminder_type">В момент события</string>
    <string name="spinner_reminder_type_hint">Напоминать</string>
    <string name="spinner_intake_type_hint">Принимать</string>
    <string name="default_intake_type">Не важно</string>
    <string name="add_duration">Настроить продолжительность</string>
    <string name="monday">Пн.</string>
    <string name="tuesday">Вт.</string>
    <string name="wednesday">Ср.</string>
    <string name="thursday">Чт.</string>
    <string name="friday">Пт.</string>
    <string name="saturday">Сб.</string>
    <string name="sunday">Вс.</string>
    <string name="default_frequency">Выбранные дни</string>
    <string name="spinner_frequency_hint">Когда принимать</string>
    <string name="start_intake_date_hint">Начало приема</string>
    <string name="end_intake_date_hint">Конец приема</string>
    <string name="number_meds_hint">Курс (количество лекарств)</string>
    <string name="number_days_hint">Курс (количество дней)</string>
    <string name="single_dosage">Разовая доза</string>
    <string name="add_med">Добавить отслеживание</string>
    <string name="select_range_dates">Выберите диапазон дат</string>
    <string name="use_banner">Использовать баннер</string>
    <string name="dialog_message_info_about_banner">Активируйте эту функцию, чтобы баннеры с напоминаниями о приеме лекарств появлялись, даже когда вы используете другие приложения</string>
    <string name="dialog_title_info_about_banner">Использовать баннер</string>
    <string name="close">Закрыть</string>
    <string name="positive_button_text">Ок</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="add_med_error_no_name">Введите название лекарства</string>
    <string name="add_med_error_no_dosage">Введите разовую дозу</string>
    <string name="add_med_error_intake_time">Введите время хотя бы одного приема</string>
    <string name="add_med_error_selected_days">Выберите дни приема</string>
    <string name="add_med_error_tracking">Заполните поле отслеживания</string>
    <string name="sp_key_camera_beta">activate_camera</string>
    <string name="beta_mode_activated">Beta mode переключен</string>
    <string name="placeholder_medication_fragment">Здесь будут показаны\nваши приемы лекарств.</string>
    <string name="to_edit">Редактировать</string>
    <string name="remove_medication_tracking">Удалить отслеживание</string>
    <string name="change_time_take">Изменить время приема</string>
    <string name="edit_med">Редактировать отслеживание</string>
    <string name="edit_reminder">Редактировать напоминания</string>
    <string name="required_field">Обязательное поле</string>
    <string name="intakes">приемов</string>
    <string name="before">до</string>
    <string name="placeholder_meds_track_fragment">Здесь будут показаны все ваши лекарства</string>
    <string name="add_med_track">Добавить лекарство</string>
    <string name="number_of_meds_per_package">в одной упаковке</string>
    <string name="expiration_date_hint">Срок годности</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="add_package">Добавить упаковку</string>
    <string name="intakes_count_is_not_defined">Количество приемов не определено</string>
    <string name="package_end_date_is_not_defined">Дата конца упаковки не определена</string>
    <string name="package_list">Список упаковок:</string>
    <string name="date_picker_confirm_button">Ок</string>
    <string name="date_picker_dismiss_button">Отмена</string>
    <string name="error_date_is_empty">Дата была инициализирована нулями</string>

    <string-array name="dosage_array">
        <item>Мг</item>
        <item>Капсулы</item>
        <item>Таблетки</item>
    </string-array>
    <string-array name="track_array">
        <item>Не добавлять</item>
        <item>Курс (количество лекарств)</item>
        <item>Курс (количество дней)</item>
        <item>Дата</item>
        <item>Запас лекарств</item>
    </string-array>
    <string-array name="reminder_array">
        <item>В момент события</item>
        <item>За 5 минут</item>
        <item>За 10 минут</item>
        <item>За 15 минут</item>
        <item>За 20 минут</item>
    </string-array>
    <string-array name="intake_array">
        <item>Не важно</item>
        <item>До еды</item>
        <item>Во время еды</item>
        <item>После еды</item>
    </string-array>
    <string-array name="frequency_array">
        <item>Выбранные дни</item>
        <item>Через день</item>
        <item>Каждый день</item>
    </string-array>
</resources>