<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/medicationFragment"
        android:icon="@drawable/menu_icon_medication"
        android:title="@string/medication_fragment" />
    <item
        android:id="@+id/medsTrackingFragment"
        android:icon="@drawable/menu_icon_meds_tracking"
        android:title="@string/meds_tracking_fragment" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/menu_icon_notifications"
        android:title="@string/notifications_fragment" />

    <!--    <item-->
    <!--        android:id="@+id/menu_profile"-->
    <!--        android:icon="@drawable/profile_icon_menu"-->
    <!--        android:title="Профиль" />-->
</menu>